# kconnect

./: .env.example  .env.railway.template  .gitignore  .replit  DASHBOARD_ARCHITECTURAL_REVIEW.md  DEPLOYMENT_SUMMARY.md  Procfile  QA_REPORT.md  RAILWAY_ENV_SETUP.txt  TEST_CREDENTIALS.md  db.sqlite3  manage.py  pyproject.toml  replit.md  requirements.txt
KPN/: asgi.py  settings.py  urls.py  wsgi.py
attached_assets/: NewDjango_1760341114775.docx  Pasted-Hello-Replit-Agent-Here-is-the-updated-status-report-and-your-new-set-of-tasks-for-the-KPN-Platform-1760271966543_1760271966548.txt  Pasted-Hello-Replit-Agent-Here-is-the-updated-status-report-and-your-new-set-of-tasks-for-the-KPN-Platform-1760311019807_1760311019810.txt
campaigns/: forms.py  models.py  urls.py  views.py
campaigns/migrations/: 0001_initial.py  0002_initial.py  0003_campaign_campaign_status_author_idx_and_more.py
core/: diagnostic_views.py  forms.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_report_deadline_report_period_report_status_and_more.py  0004_add_report_hierarchy.py  (+1 more)
docs/: PHASE_5A_IMPLEMENTATION_SUMMARY.md  REPORT_WORKFLOW_DOCUMENTATION.md
docs/reviews/: EXECUTIVE_SUMMARY.md  (+6 more)
donations/: admin.py  forms.py  models.py  urls.py  views.py
events/: admin.py  forms.py  models.py  urls.py  views.py
leadership/: admin.py  models.py
media/: forms.py  models.py  urls.py  views.py
staff/: admin.py  context_processors.py  decorators.py  forms.py  models.py  urls.py  views.py
static/: manifest.json  sw.js
templates/: base.html  sw.js
(+231 files in other folders)
