[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-libsql>=0.1.3",
    "django>=5.2.7",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
    "python-docx>=1.2.0",
    "whitenoise>=6.11.0",
    "psycopg2-binary>=2.9.11",
    "django-axes>=8.0.0",
    "django-ratelimit>=4.1.0",
]
